# PITD-Simulations

./: LICENSE  README.md
pitd_bringup/: package.xml  setup.cfg  setup.py
pitd_bringup/config/: config.yaml
pitd_bringup/launch/: sim.launch.py
pitd_controllers/: package.xml  setup.cfg  setup.py
pitd_controllers/pitd_controllers/: attacker_controller.py  data.txt  defender_controller.py  hyperviser.py  pathing_controller.py  world_controller.py
pitd_controllers/scripts/: test.py
pitd_gazebo/: CMakeLists.txt  package.xml
pitd_gazebo/launch/: circular_world.launch.py  spawn_defender.launch.py
pitd_gazebo/models/turtlebot3_waffle/: model.sdf
pitd_gazebo/models/world/AttackerSensingRegion/: model.config
pitd_gazebo/models/world/DefenderSensingRegion/: model.sdf
pitd_gazebo/scripts/: gazebo_spawner.py
pitd_gazebo/worlds/: circular_world.world
pitd_interfaces/: CMakeLists.txt  package.xml
pitd_interfaces/msg/: CaptureInfo.msg  Goal.msg
pitd_interfaces/srv/: GetParams.srv
pitd_robot_controllers/: package.xml  setup.cfg  setup.py
pitd_robot_controllers/launch/: main_computer.launch.py
pitd_robot_controllers/pitd_robot_controllers/: attacker.py  controller.py  defender.py  param_server.py  position_handler.py  robot_base.py  step_velocities.yaml  why.py
pitd_robot_controllers/pitd_robot_controllers/old/: defender.py  param_server.py  robot_base.py
